--- a/src/scss/_header.scss
+++ b/src/scss/_header.scss
@@ -19,6 +19,9 @@
 
   &__progressbar {
     width: 9.375rem;
+    @include respond-to(lg) {
+      width: 100%;
+    }
     .navbarprogressbar__header {
       justify-content: flex-end;
     }
