fix: fixed issue-1428-1426-1418

--- a/src/scss/_vaultdashboard.scss
+++ b/src/scss/_vaultdashboard.scss
@@ -113,7 +113,7 @@
     }
   }
   &__bodyright {
-    margin-bottom: 50px;
+    // margin-bottom: 50px;
     margin-top: 2.5rem;
     border: 1px solid var(--unnamed-color-f9fbfe);
     border-radius: 25px;
