--- a/src/scss/_navbarProgressBar.scss
+++ b/src/scss/_navbarProgressBar.scss
@@ -5,9 +5,11 @@
   
     &__header {
       //padding: 20px;
+      margin-top: 0.5rem;
       display: flex;
       justify-content: space-between;
       position: relative;
+      font-size: 0.9rem;
     }
   
     .progress {
