--- a/src/scss/_guidemodal.scss
+++ b/src/scss/_guidemodal.scss
@@ -3,7 +3,7 @@
         font-family: 'Poppins-Medium';
         font-size: 14px;
         padding: 0.8rem 2rem;
-        margin-right: 1rem;
+        margin-left: 1rem;
     }
     &__header {
         width: 100%;
