--- a/src/scss/_navbarProgressBar.scss
+++ b/src/scss/_navbarProgressBar.scss
@@ -1,6 +1,6 @@
 .navbarprogressbar {
     font-size: 12px;
-    font-family: 'Poppins-Medium';
+    font-family: 'Poppins-Regular';
     color: #3C4760;
   
     &__header {
