fix: linked new whitepaper

--- a/src/scss/_vaultSetupContainer.scss
+++ b/src/scss/_vaultSetupContainer.scss
@@ -8,6 +8,11 @@
         font-size: 1.2rem;
         color: var(--unnamed-color-3c4760);
         margin-right: 0.5rem;
+      
+    }
+    &-getsaberlp {
+        font-size: 0.8rem;
+        color: #0f6eff;
     }
     &-label {
         font-family: 'Poppins-Regular';
