fix: minted usdr text

--- a/src/scss/_mintableProgressbar.scss
+++ b/src/scss/_mintableProgressbar.scss
@@ -17,7 +17,7 @@
       margin-top: 1.5rem;
     }
     &::before {
-      content: 'Vault Mintable USDr';
+      content: 'Minted USDr';
       position: absolute;
       top: -10px;
       left: -3px;
