fix: added terms and condition modal

--- a/src/scss/_styles.scss
+++ b/src/scss/_styles.scss
@@ -60,6 +60,7 @@
 @import './mintableProgressbar';
 @import './warningLimitBox';
 @import './amountSlider';
+@import './termsModal';
 
 @include font-face('Poppins-SemiBold', '../assets/fonts/Poppins-SemiBold');
 @include font-face('Poppins-Bold', '../assets/fonts/Poppins-Bold');
