--- a/src/scss/_footer.scss
+++ b/src/scss/_footer.scss
@@ -1,7 +1,7 @@
 .footer {
   padding-top: 80px;
   left: 300px;
-  height: 186px;
+  // height: 250px;
   opacity: 1;
   border-top: 1px solid var(--primary-border);
   padding: 2.5rem 5rem;
