--- a/src/scss/_termsModal.scss
+++ b/src/scss/_termsModal.scss
@@ -14,14 +14,21 @@
     &__left {
         position: relative;
         height: 500px;
+       
         border-top-left-radius: 1rem;
         border-bottom-left-radius: 1rem;
         background-image: url('../assets/images/gradient.png');
         background-repeat: no-repeat;
-        background-size: cover;
+        background-size: 100% 150%;
         display: flex;
         justify-content: center;
         align-items: center;
+        @include respond-to(md) {
+          height: 200px;
+          border-top-left-radius: 1rem;
+          border-bottom-left-radius: 0rem;
+          border-top-right-radius: 1rem;
+        }
         a {
             position: absolute;
             bottom: 1rem;
@@ -42,6 +49,9 @@
             margin-top: 3rem;
             margin-left: 2rem;
             margin-bottom: 0.2rem;
+            @include respond-to(md) {
+              margin-top: 1rem;
+            }
         }
         h4 {
             font-family: 'Poppins-Medium';
@@ -65,58 +75,83 @@
             padding-right: 3rem;
         }
         &__agreebox {
-            .container input {
-                position: absolute;
-                opacity: 0;
-                cursor: pointer;
-                height: 0;
-                width: 0;
-              }
-              
-              /* Create a custom checkbox */
-              .checkmark {
-                position: absolute;
-                top: 0;
-                left: 0;
-                height: 25px;
-                width: 25px;
-                background-color: #eee;
-              }
-              
-              /* On mouse-over, add a grey background color */
-              .container:hover input ~ .checkmark {
-                background-color: #ccc;
-              }
-              
-              /* When the checkbox is checked, add a blue background */
-              .container input:checked ~ .checkmark {
-                background-color: #2196F3;
-              }
-              
-              /* Create the checkmark/indicator (hidden when not checked) */
-              .checkmark:after {
-                content: "";
-                position: absolute;
-                display: none;
-              }
-              
-              /* Show the checkmark when checked */
-              .container input:checked ~ .checkmark:after {
-                display: block;
-              }
-              
-              /* Style the checkmark/indicator */
-              .container .checkmark:after {
-                left: 9px;
-                top: 5px;
-                width: 5px;
-                height: 10px;
-                border: solid white;
-                border-width: 0 3px 3px 0;
-                -webkit-transform: rotate(45deg);
-                -ms-transform: rotate(45deg);
-                transform: rotate(45deg);
-              }
+          padding-top: 2rem;
+          padding-left: 2rem;
+          padding-right: 2rem;
+          display: flex;
+          justify-content: space-between;
+          align-items: center;
+          @include respond-to(md) {
+            margin-bottom: 2rem;
+          }
+          .agreeBtn {
+            padding-left: 1.5rem;
+            padding-right: 1.5rem;
+            padding-top: 0.5rem;
+            padding-bottom: 0.5rem;
+          }
+          .checkcontainer {
+            display: inline-block;
+            position: relative;
+            padding-left: 25px;
+            padding-top: 1px;
+            font-family: 'Poppins-Regular';
+            font-size: 0.75rem;
+            color: var(--unnamed-color-002332);
+          }
+          .checkcontainer input {
+            position: absolute;
+            opacity: 0;
+            cursor: pointer;
+            height: 0;
+            width: 0;
+          }
+          
+          /* Create a custom checkbox */
+          .checkmark {
+            position: absolute;
+            top: 0;
+            left: 0;
+            height: 18px;
+            width: 18px;
+            border: 1px solid var(--primary-border);
+            border-radius: 4px;
+          }
+          
+          /* On mouse-over, add a grey background color */
+          .checkcontainer:hover input ~ .checkmark {
+            background-color: #eee;
+          }
+          
+          /* When the checkbox is checked, add a blue background */
+          .checkcontainer input:checked ~ .checkmark {
+            background-color: white;
+          }
+          
+          /* Create the checkmark/indicator (hidden when not checked) */
+          .checkmark:after {
+            content: "";
+            position: absolute;
+            display: none;
+          }
+          
+          /* Show the checkmark when checked */
+          .checkcontainer input:checked ~ .checkmark:after {
+            display: block;
+          }
+          
+          /* Style the checkmark/indicator */
+          .checkcontainer .checkmark:after {
+            left: 6px;
+            top: 2px;
+            width: 6px;
+            height: 10px;
+            border: solid var(--unnamed-color-07b127);
+            border-width: 0 2px 2px 0;
+            -webkit-transform: rotate(45deg);
+            -ms-transform: rotate(45deg);
+            transform: rotate(45deg);
+          }
               
         }
     }
