fix: updated terms-modal content

--- a/src/scss/_termsModal.scss
+++ b/src/scss/_termsModal.scss
@@ -70,9 +70,10 @@
             padding: 2rem;
             font-size: 0.875rem;
             color: var(--unnamed-color-4c646f);
-            letter-spacing: -0.14px;
+            // letter-spacing: -0.14px;
             font-family: 'Poppins-Light';
             padding-right: 3rem;
+            line-height: 1.5rem;
         }
         &__agreebox {
           padding-top: 2rem;
