--- a/src/scss/_vaulthistorytable.scss
+++ b/src/scss/_vaulthistorytable.scss
@@ -49,6 +49,7 @@
       font-size: 12px;
       border-bottom: 2px solid var(--unnamed-color-f9fbfe);
       background-color: var(--background);
+      word-break: keep-all;
     }
     .activity {
       font-family: 'Poppins-Regular';
