--- a/src/scss/_filterpanel.scss
+++ b/src/scss/_filterpanel.scss
@@ -90,7 +90,7 @@
       }
     }
     &__menu {
-      width: 100px;
+      min-width: 100px;
       background-color: var(--unnamed-color-1B1E29);
     }
     &__input {
