--- a/src/scss/_navbarProgressBar.scss
+++ b/src/scss/_navbarProgressBar.scss
@@ -29,6 +29,7 @@
         font-family: 'Poppins-Bold';
       }
       display:flex;
+      justify-content: space-between;
       gap: 10px;
     }
 
