--- a/src/scss/_tokenpaircard.scss
+++ b/src/scss/_tokenpaircard.scss
@@ -264,6 +264,35 @@
       right: -10px;
     }
   }
-
+  &__overlaytrigger {
+    img {
+      width: 15px;
+      margin-top: -2px;
+      margin-left: 6px;
+      cursor: pointer;
+      &:hover {
+        opacity: 0.8;
+      }
+    }
+  }
+  &__overlaytooltip {
+    p {
+      font-family: 'Poppins-Regular';
+      font-size: 12px;
+      padding-bottom: 5px;
+      strong {
+        font-family: 'Poppins-SemiBold';
+      }
+    }
+    & > div {
+      font-family: 'Poppins-Regular';
+      font-size: 12px;
+    }
+    img {
+      width: 1.1rem;
+      margin-right: 5px;
+      margin-top: -2px;
+    }
+  }
 }
 
