fix: updated color in total cap

--- a/src/scss/_header.scss
+++ b/src/scss/_header.scss
@@ -39,7 +39,7 @@
 
   &__tvl {
     cursor: default !important;
-    color: #F48C57;
+    color: #07B127;
     padding-top: 19px !important;
     padding-bottom: 19px !important;
     text-align: center;
