fix: modal background-color

--- a/src/scss/_styles.scss
+++ b/src/scss/_styles.scss
@@ -177,7 +177,7 @@ input {
 .modal .modal-content {
   padding: 0px;
   border-radius: 16px;
-  background-color: var(--unnamed-color-1B1E29);
+  // background-color: var(--unnamed-color-1B1E29);
 }
 
 .modal .modal-footer {
