fix: added USDr debt progressbar in active paircard

--- a/src/scss/_tokenpaircard.scss
+++ b/src/scss/_tokenpaircard.scss
@@ -113,8 +113,9 @@
     }
   }
   &__riskBox {
+    margin-top: 0.5rem;
     p {
-      font-family: 'Poppins-Regular';
+      font-family: 'Poppins-Medium';
       font-size: 1rem;
       color: var(--unnamed-color-3c4760);
     }
