--- a/src/scss/_banner.scss
+++ b/src/scss/_banner.scss
@@ -1,7 +1,7 @@
 div.debt-limit-reached {
   top: 35px;
   width: 100%;
-  height: 56px;
+  padding-bottom: 1rem;
   background: var(--unnamed-color-ff3131) 0% 0% no-repeat padding-box;
   background: #ff3131 0% 0% no-repeat padding-box;
   opacity: 1;
