--- a/src/scss/_header.scss
+++ b/src/scss/_header.scss
@@ -43,8 +43,9 @@
     padding-top: 19px !important;
     padding-bottom: 19px !important;
     text-align: center;
+    font-family: 'Poppins-Medium';
     &::before {
-      content: 'Total TVL Cap' !important;
+      content: 'Total TVL' !important;
     }
   }
 
