fix: added ratio harvest functionality

--- a/src/scss/_amountPanel.scss
+++ b/src/scss/_amountPanel.scss
@@ -42,6 +42,7 @@
     font-family: 'Poppins-SemiBold';
     font-size: 14px;
     color: var(--unnamed-color-3c4760);
+    word-break: keep-all;
   }
   table td,
   .table th {
