--- a/src/scss/_tokensEarned.scss
+++ b/src/scss/_tokensEarned.scss
@@ -5,6 +5,7 @@
         align-items: center;
         flex-wrap: wrap;
         gap: 12px;
+        padding-bottom: 0px;
     }
 
 
@@ -12,4 +13,5 @@
         height: 40px;
         display: block;
     }
+
 }
