fix: added loading spinner for loading active vault

--- a/src/scss/_activePairCard.scss
+++ b/src/scss/_activePairCard.scss
@@ -177,6 +177,7 @@
     }
   }
   &__usdrDebtbar {
+    margin-top: 0.3rem;
     .navbarprogressbar__header > div:first-child {
       p {
         font-size: 1rem;
