--- a/src/scss/_activePairCard.scss
+++ b/src/scss/_activePairCard.scss
@@ -4,7 +4,7 @@
   &__overlaytrigger {
     img {
       width: 15px;
-      margin-top: -8px;
+      // margin-top: -8px;
       margin-left: 6px;
       cursor: pointer;
       &:hover {
