--- a/src/scss/_button.scss
+++ b/src/scss/_button.scss
@@ -11,7 +11,7 @@
     background-color: transparent;
   }
   &--blue {
-    background-image: url('../assets/images/btn-bg.svg');
+    background-image: url('../assets/images/btn-bg.svg') !important;
     // background: transparent linear-gradient(90deg, #ff69ce 0%, #bc5cf7 100%) 0% 0% no-repeat padding-box;
     opacity: 1;
     background-size: cover;
